app/assets/tailwind/components/panel.css
@layer components {
  .panel {
    @apply relative m-0 rounded-lg border border-gray-200 bg-white shadow-md dark:border-gray-700 dark:bg-gray-900;

    &.warning {
      @apply border-red-500 bg-red-100 dark:bg-red-900;
    }

    p.hint {
      @apply m-2 text-center leading-5 text-gray-500 italic;
    }

    h3 {
      @apply leading-5;
    }
  }

  .panel-title {
    @apply mt-4 mb-2 flex h-6 flex-wrap items-center gap-2 overflow-x-auto bg-transparent px-4 text-xl font-extralight whitespace-nowrap;
  }

  .panel-title-icon {
    @apply mr-1 flex items-center opacity-50;
  }

  .panel-title-count {
    @apply m-0 rounded-full bg-green-200/80 px-2 py-0 text-base font-medium text-green-800 dark:bg-green-800 dark:text-green-200;
  }

  /* Panel Actions */
  .panel-actions {
    @apply ml-auto flex space-x-3;

    a,
    button {
      @apply text-gray-400 hover:text-green-600 dark:text-gray-500 dark:hover:text-green-400;
    }

    .formtastic & {
      @apply absolute top-4 right-4 m-0 p-0;
    }

    .formtastic & + li {
      @apply mt-0;
    }
  }

  /* Panel Content */
  .panel-body {
    @apply overflow-x-auto rounded-t-none border-none px-2 py-2;
  }
}

